--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,6 +3,6 @@
     <label for="username">Username: </label>
     <input id="username" type="text" [(ngModel)]="model.username" name="username" />
     <label for="password">Password:</label>
-    <input id="password" type="text" [(ngModel)]="model._password" name="password" />
+    <input id="password" type="text" [(ngModel)]="model.password" name="password" />
     <button type="submit" class="btn btn-success" [disabled]="!loginForm.form.valid">Submit</button>
 </form>
