Bug fixes and inbox styling

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<div id="main" style="width: 100dvw; height: 100dvh;">
+    <router-outlet></router-outlet>
+</div>
