--- a/frontend/src/app/inbox-test/inbox-test.component.scss
+++ b/frontend/src/app/inbox-test/inbox-test.component.scss
@@ -1,3 +1,25 @@
-.content {
+.content-outer {
     max-height: 20em;
+    overflow: auto;
+    border: solid lightgray 1px;
+    border-radius: 0.5em;
+}
+
+.email {
+    padding: 2em;
+    margin: 1em;
+    border-radius: 1em;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; //https://getcssscan.com/css-box-shadow-examples #3
+}
+
+.it_sidebar {
+    background-color: rgb(198, 234, 255);
+    height: 100%;
+    padding: 2em;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; //https://getcssscan.com/css-box-shadow-examples #3
+}
+
+.inbox-outer {
+    height: 100%;
+    overflow: auto;
 }
