--- a/frontend/src/app/inbox-test/inbox-test.component.html
+++ b/frontend/src/app/inbox-test/inbox-test.component.html
@@ -7,25 +7,21 @@
                 }Inbox
             </h1>
         </div>
-        @if (this.isLoading === true) {
-            <div class="col-10 loading_div">
-                <h4>Loading... Please Wait</h4>
-            </div>
-        }
-        @else {
-            <div class="col-10 inbox-outer">
-                <div id="inbox_div">
-                    @for (mail of inbox; track mail) {
-                        <div class="email">
-                            <h4>{{ mail.subject }}</h4>
-                            <p>To: {{ mail.email_to }}</p>
-                            <p>From: {{ mail.email_from }}</p>
-                            <hr />
-                            <div class="content-outer"><div class="content-inner" [innerHTML]="mail.content"></div></div>
-                        </div>
-                    }
+        <div class="col-10 h-100">
+            @if (this.isLoading === true) {
+                <div class="loading_div">
+                    <h4>Loading... Please Wait</h4>
                 </div>
-            </div>
-        }
+            }
+            @else {
+                <div class="inbox-outer">
+                    <div id="inbox_div" style="width: 98%">
+                        @for (mail of inbox; track mail) {
+                            <app-email [mail] = "mail"></app-email>
+                        }
+                    </div>
+                </div>
+            }
+        </div>
     </div>
 </div>
