--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,3 +12,5 @@
     padding: 2em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; //https://getcssscan.com/css-box-shadow-examples #3
 }
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
