start working on threading
has error: UnicodeDecodeError: 'utf-8' codec can't decode byte 0x85 in position 36: invalid start byte

--- a/frontend/src/app/inbox-test/inbox-test.component.html
+++ b/frontend/src/app/inbox-test/inbox-test.component.html
@@ -6,6 +6,7 @@
                     {{ the_user.username }}'s 
                 }Inbox
             </h1>
+            <p>{{inbox?.length}}</p>
         </div>
         <div class="col-10 h-100">
             @if (this.isLoading === true) {
