--- a/frontend/src/app/inbox-test/inbox-test.component.html
+++ b/frontend/src/app/inbox-test/inbox-test.component.html
@@ -6,7 +6,7 @@
                     {{ the_user.username }}'s 
                 }Inbox
             </h1>
-            <p>{{inbox?.length}}</p>
+            <p>{{inbox?.length}} emails</p>
         </div>
         <div class="col-10 h-100">
             @if (this.isLoading === true) {
