--- a/frontend/src/app/inbox-test/inbox-test.component.scss
+++ b/frontend/src/app/inbox-test/inbox-test.component.scss
@@ -6,11 +6,8 @@
 }
 
 .inbox-outer {
-    height: 100%;
+    height: 98%;
     overflow: auto;
-}
-
-#inbox-div {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin: 1em;
     border-radius: 1em;
@@ -26,4 +23,16 @@
 
 #inbox-div div:last-child {
     border-bottom: 0;
+}
+
+.seen {
+    background-color: #dedede;
+}
+
+.unseen {
+    background-color: white;
+}
+
+#inbox-div div :hover {
+    background-color: #cccccc;
 }
