--- a/frontend/src/app/inbox-test/inbox-test.component.scss
+++ b/frontend/src/app/inbox-test/inbox-test.component.scss
@@ -6,7 +6,7 @@
 }
 
 .inbox-outer {
-    height: 94%;
+    flex: 1 1 auto;
     overflow: auto;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin: 1em;
@@ -15,6 +15,7 @@
 
 .dates {
     margin: 1em;
+    flex: 0 1 auto;
 }
 
 #spinner {
