--- a/frontend/src/app/email/email.component.scss
+++ b/frontend/src/app/email/email.component.scss
@@ -1,3 +1,19 @@
 .email {
     padding: 1em 2em 1em 2em;
 }
+
+.option_ico {
+    padding-left: 1em;
+}
+
+.flag_no {
+    color: #a5a5a5;
+}
+
+.flag_yes {
+    color: black;
+}
+
+fa-icon {
+    font-size: 1.5em;
+}
