--- a/frontend/src/app/email/email.component.html
+++ b/frontend/src/app/email/email.component.html
@@ -1,9 +1,9 @@
-@if (mail) {
+@if (this.show && mail) {
     <div class="container-fluid email">
         <div class="row">
-            <div style="cursor: pointer;" (click)="openModal()" class="col-md-11">{{ mail.id }} <h4>{{ mail.subject }}</h4></div>
+            <div style="cursor: pointer;" (click)="openModal()" class="col-md-11"><h4>{{ mail.subject }}</h4></div>
             <div class="col-md-1 justify-content-end" style="display: flex;">
-                <div class="option_ico flag_no"><fa-icon [icon]="faTrashCan"></fa-icon></div>
+                <div class="option_ico" style="cursor: pointer;" (click)="this.deleteMessage()"><fa-icon [icon]="faTrashCan"></fa-icon></div>
                 <div class="option_ico" style="cursor: pointer;" (click)="this.swapSeen()">
                     @if (mail.seen) {
                         <fa-icon [icon]="faEnvelopeOpen"></fa-icon>
