implemented basic form to send emails

--- a/frontend/src/app/inbox-test/inbox-test.component.html
+++ b/frontend/src/app/inbox-test/inbox-test.component.html
@@ -10,7 +10,7 @@
                     </h1>
                 </div>
                 <div class="row" id="new-email-container">
-                    <button class="button" type="button" id="new-email"><h4><fa-icon [icon]="faPlus"></fa-icon>&#9;New Email</h4></button>
+                    <button class="button" type="button" id="new-email" (click)="openNewModal()"><h4><fa-icon [icon]="faPlus"></fa-icon>&#9;New Email</h4></button>
                 </div>
             </div>
         </div>
