--- a/frontend/src/app/email-modal/email-modal.component.html
+++ b/frontend/src/app/email-modal/email-modal.component.html
@@ -16,14 +16,14 @@
   </div>
   <div class="modal-body">
     <div class="container-fluid">
-      <form #f="ngForm" (ngSubmit)="onSubmit()">
+      <form #newEmailForm="ngForm" (ngSubmit)="onSubmit()">
         <div class="row">
           @if (mail_id && mail) {
             <p>To: {{ mail.email_to }}</p>
           }
           @else {
             <label for="email_to">To: </label>
-            <input id="email_to" type="email" [(ngModel)]="mail.email_to" required />
+            <input class="input-design form-control" id="email_to" type="email" [(ngModel)]="mail.email_to" name="email_to" required />
           }
         </div>
         <div class="row">
@@ -32,20 +32,20 @@
           }
           @else {
             <label for="subject">Subject: </label>
-            <input id="subject" type="text" [(ngModel)]="mail.subject" />
+            <input class="input-design form-control" id="subject" type="text" [(ngModel)]="mail.subject" name="subject" />
           }
         </div>
         <div class="row"><hr /></div>
-        <div class="row content-outer">
+        <div class="row content-outer input-design">
           @if (mail_id && mail) {
             <div class="content-inner" [innerHTML]="mail.content"></div>
           }
           @else {
-            <textarea id="content" placeholder="Email content (text)..." [(ngModel)]="mail.content"></textarea>
+            <textarea class="content-outer input-design form-control" id="content" placeholder="Email content (text)..." [(ngModel)]="mail.content" name="content"></textarea>
           }
         </div>
         @if (!(mail_id && mail)) {
-          <button type="submit"><fa-icon [icon]="faPaperPlane" [size]="'2xl'"></fa-icon></button>
+          <button class="sumbit-bt button" type="submit"><fa-icon [icon]="this.faPaperPlane"></fa-icon>&#9;Send</button>
         }
       </form>
     </div>
