--- a/frontend/src/app/email-modal/email-modal.component.scss
+++ b/frontend/src/app/email-modal/email-modal.component.scss
@@ -1,6 +1,24 @@
+.input-design {
+    border: solid lightgray 1px;
+    border-radius: 0.5em;
+}
+
+.button {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    border-width: 0;
+    font-size: larger;
+}
+
 .content-outer {
     max-height: 80%;
     overflow: auto;
-    border: solid lightgray 1px;
-    border-radius: 0.5em;
+}
+
+#content {
+    min-height: 50dvh;
 }
